--- a/WebApplication1/frontend/style.css
+++ b/WebApplication1/frontend/style.css
@@ -35,7 +35,7 @@ header h1 {
 
 
 main {
-    max-width: 1100px;
+    max-width: 1300px;
     margin: 2rem auto;
     padding: 0 1rem;
     display: flex;
@@ -147,6 +147,7 @@ button#cancelEdit:hover {
     padding: 0.4rem 0.8rem;
     font-size: 0.85rem;
     color: white;
+    cursor: pointer;
 }
 
 .action-buttons button:nth-child(1) { background-color: #f39c12; } 
